Se agrega métodos para el ingreso del detalle de la compra y gastos

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NCompra.cs" />
+    <Compile Include="NDetalleCompra.cs" />
+    <Compile Include="NDetalleGasto.cs" />
     <Compile Include="NGasto.cs" />
     <Compile Include="NProducto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
