--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="NCompra.cs" />
     <Compile Include="NDetalleCompra.cs" />
+    <Compile Include="NDetalleCompraGastos.cs" />
     <Compile Include="NDetalleGasto.cs" />
     <Compile Include="NGasto.cs" />
     <Compile Include="NProducto.cs" />
