Se agrega clases vista-modelo y proceso para obtener el detalle de compra y gasto

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>DB.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\CompraGastoViewModel.cs" />
+    <Compile Include="ViewModels\DetalleCompraViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
