Se agrega métodos js para obtener los costos sobre el detalle de la compra y gastos por fecha

--- a/CompraVentaPrecios/CompraVentaPrecios.csproj
+++ b/CompraVentaPrecios/CompraVentaPrecios.csproj
@@ -1823,6 +1823,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\Operaciones\costo.js" />
     <Content Include="Scripts\Operaciones\compra.js" />
     <Content Include="Scripts\Operaciones\gasto.js" />
     <Content Include="Scripts\Operaciones\producto.js" />
