Se agrega proceso para obtener el detalle de la ganancia y venta y completar la tabla de costos

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAnnotations\CompraGananciaPorcentaje.cs" />
     <Compile Include="DataAnnotations\DetalleCompraGasto.cs" />
     <Compile Include="DB.Context.cs">
       <AutoGen>True</AutoGen>
