--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="DataAnnotations\CompraGananciaPorcentaje.cs" />
     <Compile Include="DataAnnotations\DetalleCompraGasto.cs" />
+    <Compile Include="DataAnnotations\DetalleGananciaVenta.cs" />
     <Compile Include="DB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
